<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Module2Fragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="377dp"
        android:layout_height="588dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/purple"
        android:gravity="center"
        android:orientation="vertical"
        android:translationY="30dp">

        <Button
            android:layout_width="310dp"
            android:layout_height="66dp"
            android:backgroundTint="@color/peach"
            android:textColor="@color/violet"
            android:fontFamily="@font/alumnisans_regular"
            android:gravity="center_vertical|start"
            android:text="@string/criptohistory"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_lectures"
            android:layout_width="310dp"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/peach"
            android:textColor="@color/violet"
            android:fontFamily="@font/alumnisans_regular"
            android:gravity="center_vertical|start"
            android:onClick="educationActivity"
            android:text="@string/symmetric_cipher"
            android:textSize="24sp" />

        <Button
            android:layout_width="310dp"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/peach"
            android:textColor="@color/violet"
            android:fontFamily="@font/alumnisans_regular"
            android:gravity="center_vertical|start"
            android:text="@string/search_and_optimization"
            android:textSize="24sp" />

        <Button
            android:layout_width="310dp"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/peach"
            android:textColor="@color/violet"
            android:fontFamily="@font/alumnisans_regular"
            android:gravity="center_vertical|start"
            android:text="@string/Trisemus"
            android:textSize="24sp" />

        <Button
            android:layout_width="310dp"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/peach"
            android:textColor="@color/violet"
            android:fontFamily="@font/alumnisans_regular"
            android:gravity="center_vertical|start"
            android:text="@string/Playfair"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView

        android:id="@+id/textView2"
        android:layout_width="259dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_background_text"
        android:fontFamily="@font/blackberry_normal"
        android:gravity="center_vertical|start"
        android:paddingStart="10dp"
        android:text="@string/modul2"
        android:textAlignment="inherit"
        android:textColor="@color/violet"
        android:textSize="42sp"
        android:translationY="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="182dp"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_background_text"
        android:fontFamily="@font/alumnisans_regular"
        android:paddingStart="10dp"
        android:text="@string/symmetric_cipher_cap"
        android:textColor="@color/violet"
        android:textSize="20sp"
        android:translationX="70dp"
        android:translationY="65dp"
        tools:ignore="RtlSymmetry" />

</FrameLayout>