<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EducationActivity"
    android:background="@color/dark_salmon">

    <Button
        android:id="@+id/button2"
        android:layout_width="369dp"
        android:layout_height="180dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_background"
        android:fontFamily="@font/alumnisans_regular"
        android:gravity="center"
        android:text="@string/lecture"
        android:textSize="112sp"
        app:backgroundTint="@color/peach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="lectureActivity"/>

    <Button
        android:layout_width="209dp"
        android:layout_height="291dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_background"
        android:fontFamily="@font/alumnisans_regular"
        android:gravity="center"
        android:text="@string/task"
        android:textSize="62sp"
        app:backgroundTint="@color/peach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        android:onClick="taskActivity"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="291dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="240dp"
        android:background="@drawable/rounded_background"
        android:fontFamily="@font/alumnisans_regular"
        android:gravity="center"
        android:text="@string/test"
        android:textSize="62sp"
        app:backgroundTint="@color/peach"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="415dp"
        android:layout_height="120dp"
        android:layout_marginBottom="56dp"
        android:background="@color/violet"
        android:fontFamily="@font/blackberry_normal"
        android:gravity="center"
        android:text="@string/symmetric_cipher"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>